force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Mapping__c/agf__ADM_Priority_Mapping__c.object-meta.xml
<CustomObject>
    <label>Priority Mapping</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priority Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>