force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Mapping__c/fields/agf__Frequency__c.field-meta.xml
<CustomField>
    <fullName>agf__Frequency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Frequency</label>
    <referenceTo>agf__ADM_Frequency__c</referenceTo>
    <relationshipName>Severity_Matries</relationshipName>
    <type>Lookup</type>
</CustomField>