force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Mapping__c/fields/agf__Priority__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority</label>
    <referenceTo>agf__ADM_Priority__c</referenceTo>
    <relationshipLabel>Priority Mapping</relationshipLabel>
    <relationshipName>Priority_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>