force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Mapping__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>agf__Frequency__c</columns>
    <columns>agf__Impact__c</columns>
    <columns>agf__Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>